--- a/fe/package.json
+++ b/fe/package.json
@@ -21,6 +21,7 @@
     "simple-line-icons": "^2.4.1",
     "vue": "2.4.4",
     "vue-chartjs": "2.8.7",
+    "vue-i18n": "^5.0.3",
     "vue-router": "2.7.0"
   },
   "devDependencies": {
